# AutoStudio

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py  test.py
c++/: CMakeLists.txt
c++/src/data/: dataset.cpp  dataset.h
c++/src/dataset/: Dataset.cpp  Dataset.h
c++/src/utils/: Image.cpp  Image.h
confs/: synthetic_nerf.yaml  waymo.yaml
confs/dataset/: default.yaml
confs/mesh/: mesh.yaml
confs/models/: f2.yaml  ssf.yaml
confs/train/: 20k.yaml
data/: README.md
python/lib_tools/: __init__.py
python/lib_tools/depth_normals/: __init__.py  omnidata.py
python/scripts/processing/: __init__.py  processing_calar.py
scripts/: __init__.py  tmp_debug.py  tmp_run.py
scripts/data_processing/: __init__.py  extract_masks_SGF.py  gather.py  preprocess_nerf.py  preprocess_waymo.py  process_calar_SSF.py  process_carla.py  process_carla_SSF.py  process_nuscene.py  process_zj.py  utils.py
scripts/dataloader/: calar.py
scripts/lib_tools/depth_normals/: mini_omnidata.py  omnidata.py  (+1 more)
scripts/util/: __init__.py  nerfpp.py  transform.py
src/: Common.h  common.h
src/dataset/: Dataset.cpp  Dataset.cu  Dataset.h  dataset.cmake
src/geometry/: Geometry.cpp  MeshExtractor.cpp  MeshExtractor.cu  MeshExtractor.h  MeshFactory.cpp  MeshFactory.h  geometry.cmake
src/modules/: modules.cmake
src/pipeline/: ModelPipline.cpp  ModelPipline.h  Pipeline.cpp  Pipeline.h  pipeline.cmake
src/pipline/: pipline.cmake  pipline_main.cpp  pipline_main.h
src/utils/: GlobalData.cpp  GlobalData.h  Image.cpp  Image.h  Utils.cpp  Utils.h  cnpy.h  log.h  utils.cmake
(+64 files in other folders)
